Fix footer alignment - left-align admin link

--- a/public/styles.css
+++ b/public/styles.css
@@ -308,7 +308,7 @@ main {
 footer {
     margin-top: calc(var(--spacing-unit) * 6);
     padding: calc(var(--spacing-unit) * 3) var(--spacing-unit);
-    text-align: center;
+    text-align: left;
 }
 
 .admin-link {
